correccion responsive niniomafia

--- a/secciones/niniomafia.html
+++ b/secciones/niniomafia.html
@@ -43,17 +43,18 @@
       <section class="titulo">
           <h1>NINIOMAFIA</h1>
       </section>
-
-    <div id="segmento">
-        <div>
-            <iframe width="760" height="427" src="https://www.youtube.com/embed/videoseries?list=OLAK5uy_meupDM94qrcNSdZLZGaX5aJbfT8-jWrw0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <main id="principal">
+        <div class="video-responsive">
+          <iframe src="https://www.youtube.com/embed/videoseries?list=OLAK5uy_meupDM94qrcNSdZLZGaX5aJbfT8-jWrw0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>" frameborder="0" allowfullscreen></iframe>
         </div>
+          
         <section class="ninio__description">
           <h3>Musico, compositor e interprete.</h3>
           <p> Ser musical del oeste de orientacion filosofica <span">Levivista!</span><p> Proyecto que nace basicamente para romperle las pelotas a nuestra quietud mental e invita a reflexionar y mandar al carajo TODO lo prestablecido... te invitamos a conocer un poco de su arte! <a href="https://www.instagram.com/niniomafia/?hl=es-la" target="_blank">Niniomafia</a></p>
           <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/3KZ6RS3620JUb3ZtmUpwZV?utm_source=generator" width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
         </section>
-    </div>
+      </div>
+    </main>
 
     <footer>
         <div class="conteiner-fluid bg-dark text-center p-3">
