agregamos animaciones al index

--- a/secciones/niniomafia.html
+++ b/secciones/niniomafia.html
@@ -50,7 +50,7 @@
           
         <section class="ninio__description">
           <h3>Musico, compositor e interprete.</h3>
-          <p> Ser musical del oeste de orientacion filosofica <span">Levivista!</span><p> Proyecto que nace basicamente para romperle las pelotas a nuestra quietud mental e invita a reflexionar y mandar al carajo TODO lo prestablecido... te invitamos a conocer un poco de su arte! <a href="https://www.instagram.com/niniomafia/?hl=es-la" target="_blank">Niniomafia</a></p>
+          <p> Ser musical del oeste de orientacion filosofica <span">Levivista!</span><p> Proyecto que nace basicamente para romperle las pelotas a nuestra quietud mental e invita a reflexionar y mandar al carajo TODO lo prestablecido... te invitamos a conocer un poco de su arte! <a href="https://www.instagram.com/niniomafia/?hl=es-la" target="_blank"><img src="../iconos/instagram3.png" alt="instagram"></a></p>
           <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/3KZ6RS3620JUb3ZtmUpwZV?utm_source=generator" width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
         </section>
       </div>
