--- a/secciones/niniomafia.html
+++ b/secciones/niniomafia.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="../css/style-propio.css">
 </head>
 <body>
-    <nav class="navbar navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-dark fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand" href="../index.html">LVV-Producciones</a>
+          <a class="navbar-brand" href="../index.html"><img src="../logo/logo3.jpg" alt="logo-LVV"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
