--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="./css/style-propio.css">
 </head>
 <body>
-    <nav class="navbar navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-dark fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand" href="./index.html">LVV-Producciones</a>
+          <a class="navbar-brand" href="./index.html" ><img src="./logo/logo3.jpg" alt="logo-LVV"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -42,7 +42,7 @@
 
       <div class="bajada">
         <h1>LVV Producciones</h1>
-        <p>Productora musical del Oeste de Buenos Aires con orientacion <span id="#">Levivista</span> conducida por Marcos Romano</p>
+        <p>Productora musical del Oeste de Buenos Aires con orientacion <span><a href="#levivista">Levivista</a></span> conducida por <a href="https://www.instagram.com/marcosmusicaromano/?hl=es">Marcos Romano</a></p>
         
       </div>
 
@@ -50,16 +50,16 @@
       <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-inner" style="width: 75%; margin: 0 auto;">
           <div class="carousel-item active">
-            <img src="./img/LVV.png" class="d-block w-100" alt="LVV">
+            <img src="./img/lvv-producciones.jpg" class="d-block w-100" alt="LVV">
           </div>
           <div class="carousel-item">
-            <img src="./img/ninio.png" class="d-block w-100" alt="NinioMafia">
+            <img src="./img/niniomafia.jpg" class="d-block w-100" alt="NinioMafia">
           </div>
           <div class="carousel-item">
-            <img src="./img/loopera.png" class="d-block w-100" alt="loopera">
+            <img src="./img/llb.jpg" class="d-block w-100" alt="loopera">
           </div>
           <div class="carousel-item">
-            <img src="./img/troupe.png" class="d-block w-100" alt="troupe">
+            <img src="./img/troupe.jpg" class="d-block w-100" alt="troupe">
           </div>
           <div class="carousel-item">
             <img src="./img/proyecto.png" class="d-block w-100" alt="proyecto">
@@ -76,7 +76,7 @@
       </div>
 
       <section class="segmento">
-        <h2>Movimiento Levivista</h2>
+        <h2 id="levivista">Movimiento Levivista</h2>
         <p class="parrafo1"><strong>Levivismo:</strong>Levi (le vamos) vi (viendo) ismo (orientacion innovadora) // estado de improvisacion permanente, entendido este termino como accion o condicion de estar en flujo de respuestas // Aliado de la ludotomia, la androginia, la flexibilidad, el espectro carnavalesco, la improvisacion y LVV.<br>Enemigo no contrapuesto del quasismo (QA) Quedamos asi.<br>Andre Levivinsky 1934 - lfv</p>
       </section>
 
