--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/style-propio.css">
 </head>
 <body>
-    <nav class="navbar navbar-dark fixed-top">
+    <nav class="navbar navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="./index.html" ><img src="./logo/logo3.jpg" alt="logo-LVV"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
@@ -42,7 +42,7 @@
 
       <div class="bajada">
         <h1>LVV Producciones</h1>
-        <p>Productora musical del Oeste de Buenos Aires con orientacion <span><a href="#levivista">Levivista</a></span> conducida por <a href="https://www.instagram.com/marcosmusicaromano/?hl=es">Marcos Romano</a></p>
+        <p>Productora musical del Oeste de Buenos Aires con orientacion <span><a href="#levivista">Levivista</a></span> conducida por Marcos Romano.
         
       </div>
 
@@ -82,7 +82,7 @@
 
       <footer>
         <div class="conteiner-fluid bg-dark text-center p-3">
-          <p class="small">LVV-Producciones musicales / 2022</p> 
+          <p class="small">LVV-Producciones musicales / 2022 / Todos los Derechos Reservados</p>
         </div>
       </footer>
       
