--- a/secciones/niniomafia.html
+++ b/secciones/niniomafia.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/style-propio.css">
 </head>
 <body>
-    <nav class="navbar navbar-dark fixed-top">
+    <nav class="navbar navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="../index.html"><img src="../logo/logo3.jpg" alt="logo-LVV"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
@@ -57,9 +57,9 @@
     </main>
 
     <footer>
-        <div class="conteiner-fluid bg-dark text-center p-3">
-            <p class="small">LVV-Producciones se reserva todos los derechos / 2022</p>
-          </div>
+      <div class="conteiner-fluid bg-dark text-center p-3">
+        <p class="small">LVV-Producciones musicales / 2022 /Todos los Derechos Reservados /</p>
+      </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
