--- a/secciones/niniomafia.html
+++ b/secciones/niniomafia.html
@@ -56,6 +56,27 @@
       </div>
     </main>
 
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-2">
+          <img src="../img-ninio/Ninio.png" alt="1">
+        </div>
+        <div class="col-sm-2">
+          <img src="../img-ninio/Ninio2.png" alt="2">
+        </div>
+        <div class="col-sm-2">
+          <img src="../img-ninio/Ninio3.png" alt="3">
+        </div>
+        <div class="col-sm-2">
+          <img src="../img-ninio/Ninio4.png" alt="4">
+        </div>
+        <div class="col-sm-2">
+          <img src="../img-ninio/Ninio5.png" alt="5">
+        </div>
+        
+      </div>
+    </div>
+
     <footer>
       <div class="conteiner-fluid bg-dark text-center p-3">
         <p class="small">LVV-Producciones musicales / 2022 /Todos los Derechos Reservados /</p>
