--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LVV-Producciones</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style-propio.css">
-</head>
+    <link rel="stylesheet" href="./css/mi-estilo.css">
+    <link rel="stylesheet" href="./sass/estilos.css">
+  
 <body>
     <nav class="navbar navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
@@ -41,8 +42,8 @@
       </nav>
 
       <div class="bajada">
-        <h1>LVV Producciones</h1>
-        <p>Productora musical del Oeste de Buenos Aires con orientacion <span><a href="#levivista">Levivista</a></span> conducida por Marcos Romano.
+        <h1 class="bajada__titulo">LVV Producciones</h1>
+        <p class="bajada__parrafo">Productora musical del Oeste de Buenos Aires con orientacion <span><a class="bajada__ancla" href="#levivista">Levivista</a></span> conducida por Marcos Romano.
         
       </div>
 
@@ -76,7 +77,7 @@
       </div>
 
       <section class="segmento">
-        <h2 id="levivista">Movimiento Levivista</h2>
+        <h2 class="segmento__subtitulo" id="levivista">Movimiento Levivista</h2>
         <p class="parrafo1"><strong>Levivismo:</strong>Levi (le vamos) vi (viendo) ismo (orientacion innovadora) // estado de improvisacion permanente, entendido este termino como accion o condicion de estar en flujo de respuestas // Aliado de la ludotomia, la androginia, la flexibilidad, el espectro carnavalesco, la improvisacion y LVV.<br>Enemigo no contrapuesto del quasismo (QA) Quedamos asi.<br>Andre Levivinsky 1934 - lfv</p>
       </section>
 
