--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                   <a class="nav-link active" aria-current="page" href="./secciones/niniomafia.html">NinioMafia</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">La Loopera Bailable</a>
+                  <a class="nav-link active" aria-current="page" href="./secciones/lalooperabailable.html">La Loopera Bailable</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="#">Troupe Percusión</a>
