--- a/secciones/lalooperabailable.html
+++ b/secciones/lalooperabailable.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Niniomafia</title>
+    <title>La Loopera Bailable</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/mi-estilo.css">
     <link rel="stylesheet" href="../sass/estilos.css">
-
+    <link rel="stylesheet" href="../css/mi-estilo.css">
 </head>
 <body>
     <nav class="navbar navbar-dark bg-dark fixed-top">
@@ -28,7 +27,7 @@
                   <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="../secciones/lalooperabailable.html">La Loopera Bailable</a>
+                  <a class="nav-link active" aria-current="page" href="../secciones/niniomafia.html">Niniomafia</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="#">Troupe Percusión</a>
@@ -42,41 +41,27 @@
         </div>
       </nav>
 
-      <section class="titulo">
-          <h1>NINIOMAFIA</h1>
-      </section>
-    <main id="principal">
-        <div class="video-responsive">
-          <iframe src="https://www.youtube.com/embed/videoseries?list=OLAK5uy_meupDM94qrcNSdZLZGaX5aJbfT8-jWrw0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>" frameborder="0" allowfullscreen></iframe>
-        </div>
-          
-        <section class="ninio__description">
-          <h3>Musico, compositor e interprete.</h3>
-          <p> Ser musical del oeste de orientacion filosofica <span">Levivista!</span><p> Proyecto que nace basicamente para romperle las pelotas a nuestra quietud mental e invita a reflexionar y mandar al carajo TODO lo prestablecido... te invitamos a conocer un poco de su arte! <a href="https://www.instagram.com/niniomafia/?hl=es-la" target="_blank"><img src="../iconos/instagram3.png" alt="instagram"></a></p>
-          <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/3KZ6RS3620JUb3ZtmUpwZV?utm_source=generator" width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-        </section>
-      </div>
-    </main>
+    <div class="bajada">
+        <h1 class="bajada__titulo">La Loopera Bailable</h1>
+            <p class="bajada__parrafo">Orquesta Levivista ( LVV - Lo Vamo Viendo) <br>
+                👉Nosotro LA LOOPERA 👉Ustedes BAILABLE <br>
+                👌Dirección : Marcos Romano🤘 <br>
+                💥Del Oeste para el Mundo💥 <br>
+                👉I🤘M👌P🤙R✊O👈
+            </p>
+    </div>
+    <div class="conteiner">
+        <div class="grid-item"><iframe src="https://www.youtube.com/embed/aY_sxRyM_co?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></iframe></div>
+        <div class="grid-item"><img src="../grid-loopera/LaLoopera.png" alt=""></div>
+        <div class="grid-item"><img src="../grid-loopera/LaLoopera2.png" alt=""></div>
+        <div class="grid-item"><img src="../grid-loopera/LaLoopera3.png" alt=""></div>
+        <div class="grid-item"><img src="../grid-loopera/LaLoopera4.png" alt=""></div>
+    </div>
 
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-sm-2">
-          <img src="../img-ninio/Ninio.png" alt="1">
-        </div>
-        <div class="col-sm-2">
-          <img src="../img-ninio/Ninio2.png" alt="2">
-        </div>
-        <div class="col-sm-2">
-          <img src="../img-ninio/Ninio3.png" alt="3">
-        </div>
-        <div class="col-sm-2">
-          <img src="../img-ninio/Ninio4.png" alt="4">
-        </div>
-        <div class="col-sm-2">
-          <img src="../img-ninio/Ninio5.png" alt="5">
-        </div>
-        
-      </div>
+    <div class="segmento">
+        <h4>Jugamos a la musica, gozamos y disfrutamos mientras coordinamos nuestros instrumentos para generar los mas variados sonidos...</h4><br>
+           <p>Estos sonidos nacen del centro del ser y tras fluir por nuestro sistema nervioso terminan por desprenderse de nuestro cuerpo precizamente a través de nuestros dedos para llegar en forma de nota/indicación a los "Looperines" (receptores e interpretes del sonido) .Dando así nacimiento a la iprovisación.<br> La sorpresa constante es , justamente, una constante dentro de este estilo... </p>
+        <p>Advertimos a quienes osen acercarse que no van a poder mantener su cuerpo estático y por eso sugerimos venir livianos de ropa pero, principalmente, abiertos de mente!</p>
     </div>
 
     <footer>
@@ -85,7 +70,8 @@
       </div>
     </footer>
 
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>      
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
 </html>
