--- a/secciones/lalooperabailable.html
+++ b/secciones/lalooperabailable.html
@@ -52,10 +52,11 @@
     </div>
     <div class="conteiner">
         <div class="grid-item"><iframe src="https://www.youtube.com/embed/aY_sxRyM_co?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></iframe></div>
-        <div class="grid-item"><img src="../grid-loopera/LaLoopera.png" alt=""></div>
-        <div class="grid-item"><img src="../grid-loopera/LaLoopera2.png" alt=""></div>
-        <div class="grid-item"><img src="../grid-loopera/LaLoopera3.png" alt=""></div>
-        <div class="grid-item"><img src="../grid-loopera/LaLoopera4.png" alt=""></div>
+        <div class="grid-item"><a href="https://www.instagram.com/lalooperabailable/"><img src="../grid-loopera/LaLoopera.png" alt="Loopera"></a></div>
+        <div class="grid-item"><img src="../grid-loopera/LaLoopera2.png" alt="Bailable"></div>
+        <div class="grid-item"><img src="../grid-loopera/LaLoopera3.png" alt="masterloop"></div>
+        <div class="grid-item"><img src="../grid-loopera/LaLoopera4.png" alt="levivistas"></div>
+        <div class="grid-item"><img src="../grid-loopera/LaLoopera5.png" alt="band"></div>
     </div>
 
     <div class="segmento">
