--- a/secciones/niniomafia.html
+++ b/secciones/niniomafia.html
@@ -31,7 +31,7 @@
                   <a class="nav-link active" aria-current="page" href="../secciones/lalooperabailable.html">La Loopera Bailable</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Troupe Percusión</a>
+                  <a class="nav-link active" aria-current="page" href="../secciones/troupe.html">Troupe Percusión</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="#">Tu Proyecto</a>
