--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                   <a class="nav-link active" aria-current="page" href="./secciones/troupe.html">Troupe Percusión</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Tu Proyecto</a>
+                  <a class="nav-link active" aria-current="page" href="./secciones/tu-proyecto.html">Tu Proyecto</a>
                 </li>
               </ul>
             </div>
