--- a/secciones/troupe.html
+++ b/secciones/troupe.html
@@ -39,7 +39,7 @@
                   <a class="nav-link active" aria-current="page" href="../secciones/lalooperabailable.html">La Loopera Bailable</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Tu Proyecto</a>
+                  <a class="nav-link active" aria-current="page" href="../secciones/tu-proyecto.html">Tu Proyecto</a>
                 </li>
               </ul>
             </div>
